# QtShanoir

./: CMakeLists.txt
CMake/: QtShanoirConfig.cmake.in
CMake/Modules/: set_exe_install_rules.cmake  set_lib_install_rules.cmake  set_lib_properties_variables.cmake
Command/shanoirqr/: CMakeLists.txt
DAO/: CMakeLists.txt  dao.cpp  dao.h  parsetree.cpp  parsetree.h  qtshanoirdataset.cpp  qtshanoirdownload.cpp  qtshanoirexam.cpp  qtshanoirmain.cpp  qtshanoirprocess.cpp  qtshanoirstudy.cpp  qtshanoirsubject.cpp  qtshanoirtree.cpp  qtshanoirwebservice.cpp
Demo/: CMakeLists.txt  demo.cpp  demo.ui  main.cpp
GUI/: CMakeLists.txt  demo.cpp  qtshanoirdetailswidget.cpp  qtshanoirdetailswidget.h  qtshanoirdownloadwidget.cpp  qtshanoirerrorwidget.cpp  qtshanoirprogresswidget.cpp  qtshanoirsearchwidget.cpp  qtshanoirsettingswidget.cpp  qtshanoirsettingswidget.h  qtshanoirtreewidget.cpp  qtshanoirtreewidget.h  qtshanoiruploadwidget.cpp  qtshanoiruploadwidgetcoresfilesinputs.cpp  qtshanoiruploadwidgetcoressfilesprocessdataset.cpp  qtshanoiruploadwidgetdatasettypedetails.cpp  qtshanoiruploadwidgetdatasettypedetails.h  qtshanoiruploadwidgetdatasettypedetailscalibrationdataset.cpp  qtshanoiruploadwidgetdatasettypedetailseegmegpetdataset.cpp  qtshanoiruploadwidgetdatasettypedetailsmrdataset.cpp  qtshanoiruploadwidgetdatasettypedetailsmrspectroscopydataset.cpp  qtshanoiruploadwidgetdatasettypedetailsparameterquantificationdataset.cpp  qtshanoiruploadwidgetdatasettypedetailsspectdataset.cpp  qtshanoiruploadwidgetdatasettypedetailstemplatedataset.cpp  qtshanoiruploadwidgetdragfiles.cpp  qtshanoiruploadwidgetintermediate.cpp  qtshanoiruploadwidgetselectinputs.cpp  qtshanoiruploadwidgetselectinputs.ui  qtshanoiruploadwidgetselectprocess.cpp
